hphp/test/slow/hack_arr_compat/array_merge_recursive.php.expectf
Fatal error: Uncaught exception 'OutOfBoundsException' with message 'Lval on missing array element' in %s/slow/hack_arr_compat/array_merge_recursive.php:8
Stack trace:
%A
